[package]
name = "am2320"
version = "0.1.0"
description = "Platform-agnostic driver to interface with the AM2320 I2c temperature & humidity sensor based on the `embedded-hal` traits"
keywords = ["driver", "temperature", "humidity", "sensor", "embedded-hal"]
license = "MIT OR Apache-2.0"
authors = ["Gabriel Féron <feron.gabriel@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
rppal = { version = "0.11", features = ["hal"] }

# remove once PR is merged
[patch.crates-io]
rppal = { git = "https://github.com/gferon/rppal.git", branch = "remove-conflicting-impl" }