[package]
name = "am2320"
version = "0.2.0"
description = "Platform-agnostic driver to interface with the AM2320 I2c temperature & humidity sensor based on the `embedded-hal` traits"
categories = ["hardware-support"]
keywords = ["driver", "temperature", "humidity", "sensor", "embedded-hal"]
license = "MIT OR Apache-2.0"
authors = ["Gabriel Féron <feron.gabriel@gmail.com>"]
edition = "2018"
repository = "https://github.com/gferon/am2320.rs"

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
rppal = { version = "0.16", features = ["hal"] }
